pipe work not compeleted for search. password reset not completed.

--- a/src/main/resources/static/userinfo/src/app/signup/signup.component.html
+++ b/src/main/resources/static/userinfo/src/app/signup/signup.component.html
@@ -7,55 +7,55 @@
         <div class="input-group-prepend">
           <span class="input-group-text"> <i class="fa fa-user"></i> </span>
         </div>
-        <input [(ngModel)]="user.firstName" name="firstName" class="form-control" placeholder="First Name" type="text" required>
+        <input [(ngModel)]="user.firstName" id="1" name="firstName" class="form-control" placeholder="First Name" type="text" required>
       </div> <!-- form-group// -->
       <div class="form-group input-group">
         <div class="input-group-prepend">
           <span class="input-group-text"> <i class="fa fa-users"></i> </span>
         </div>
-        <input [(ngModel)]="user.lastName" name="lastName" class="form-control" placeholder="Last Name" type="text" required>
+        <input [(ngModel)]="user.lastName" id="2" name="lastName" class="form-control" placeholder="Last Name" type="text" required>
       </div> <!-- form-group// -->
       <div class="form-group input-group">
         <div class="input-group-prepend">
           <span class="input-group-text"> <i class="fa fa-calendar"></i> </span>
         </div>
-        <input [(ngModel)]="user.dob" name="dob" class="form-control" placeholder="Birth Date" type="date" required>
+        <input [(ngModel)]="user.dob" id="3" name="dob" class="form-control" placeholder="Birth Date" type="date" required>
       </div> <!-- form-group// -->
       <div class="form-group input-group">
         <div class="input-group-prepend">
           <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
         </div>
-        <input [(ngModel)]="user.address" name="address" class="form-control" placeholder="Address" type="text" required>
+        <input [(ngModel)]="user.address" id="4" name="address" class="form-control" placeholder="Address" type="text" required>
       </div>
       <div class="form-group input-group">
         <div class="input-group-prepend">
           <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
         </div>
-        <input [(ngModel)]="user.username" (blur)="checkUserName()" name="email" class="form-control"  placeholder="User Name" type="text" required>
+        <input [(ngModel)]="user.username" (blur)="checkUserName()" id="5" name="email" class="form-control"  placeholder="User Name" type="text" required>
       </div>
-      <div class="alert alert-danger" role="alert" *ngIf='userNamesuccess=="true"'>
+      <div class="alert alert-danger" role="alert" *ngIf='userNamesuccess == false'>
         {{userNameMessage}}
       </div><!-- form-group// -->
       <div class="form-group input-group">
         <div class="input-group-prepend">
           <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
         </div>
-        <input [(ngModel)]="user.email" (blur)="checkEmail()" name="email" class="form-control"  placeholder="Email" type="email" required>
+        <input [(ngModel)]="user.email" (blur)="checkEmail()" id="6" name="email" class="form-control"  placeholder="Email" type="email" required>
       </div> <!-- form-group// -->
-      <div class="alert alert-danger" role="alert" *ngIf='success=="false"'>
+      <div class="alert alert-danger" role="alert" *ngIf='success==false'>
         {{emailMessage}}
       </div>
       <div class="form-group input-group">
         <div class="input-group-prepend">
           <span class="input-group-text"> <i class="fa fa-phone"></i> </span>
         </div>
-        <input [(ngModel)]="user.phone" name="phone" class="form-control" placeholder="Phone" type="text" required>
+        <input [(ngModel)]="user.phone" id="7" name="phone" class="form-control" placeholder="Phone" type="text" required>
       </div>
       <div class="form-group input-group">
         <div class="input-group-prepend">
           <span class="input-group-text"> <i class="fa fa-building"></i> </span>
         </div>
-        <select [(ngModel)]="user.role" name="role" class="form-control" required>
+        <select [(ngModel)]="user.role" id="8" name="role" class="form-control" required>
           <option value="ADMIN">ADMIN</option>
           <option value="USER">USER</option>
         </select>
@@ -64,13 +64,13 @@
         <div class="input-group-prepend">
           <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
         </div>
-        <input [(ngModel)]="user.password" name="password" class="form-control" placeholder="Create password" type="password" required>
+        <input [(ngModel)]="user.password" id="9" name="password" class="form-control" placeholder="Create password" type="password" required>
       </div>
       <div class="form-group input-group">
         <div class="input-group-prepend">
           <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
         </div>
-        <input [(ngModel)]="rematch" name="rematch" class="form-control" placeholder="Repeat password" type="password" (input)="matchPass(rematch)" required>
+        <input [(ngModel)]="rematch" id="10" name="rematch" class="form-control" placeholder="Repeat password" type="password" (input)="matchPass(rematch)" required>
       </div> <!-- form-group// -->
       <div class="alert alert-danger" role="alert" *ngIf="message">
         {{message}}
