--- a/src/main/resources/static/userinfo/src/app/dash-board/dash-board.component.html
+++ b/src/main/resources/static/userinfo/src/app/dash-board/dash-board.component.html
@@ -1,4 +1,6 @@
-<div class="row">
+
+
+<div class="row" >
   <div class="col-md-12">
     <nav class="navbar navbar-expand-md navbar-dark bg-info">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -22,16 +24,54 @@
   <div class="col-md-2">
     <div class="sidenav" style="margin-top: 71px">
       <a (click)="checkProfile()">Profile</a>
-      <a (click)="getUserPage(0)" *ngIf="role =='ADMIN'">User List</a>
+      <a (click)="getUserPage(0)" *ngIf="role =='ADMIN' && pass==false">User List</a>
     </div>
   </div>
 </div>
 
-<div class="container" *ngIf="role== 'ADMIN'">
+<div class="container-fluid" *ngIf="pass==true">
+  <app-user-panel></app-user-panel>
+</div>
+
+<div class="container" *ngIf="role== 'ADMIN' && pass==false">
   <div class="row" >
     <div class="col-md-10">
       <div class="col-md-12 text-center" style="margin-right: 100px">
         <p style="font-size: 30px">ADMIN PROFILE</p>
+      </div>
+      <div class="container-fluid" *ngIf="profile==true">
+        <div class="table-responsive-lg">
+          <div class="table-head table-bordered">
+            <div class="row">
+              <div class="col">Name</div>
+              <div class="col">Age</div>
+              <div class="col">Email</div>
+              <div class="col">Phone</div>
+            </div>
+          </div>
+          <div class="table-body table-bordered">
+            <div *ngFor="let user of users|paginate:{itemsPerPage: size,currentPage: page,totalItems: totalElements}"
+                 class="row">
+
+              <div class="col">{{user.username}}</div>
+              <div class="col">{{user.age}}</div>
+              <div class="col">{{user.email}}</div>
+              <div class="col">{{user.phone}}</div>
+            </div>
+          </div>
+          <pagination-controls
+            (pageChange)="page = $event; pageChangeFire(page)"
+            nextLabel="Next"
+            previousLabel="Previous"
+            responsive="true"
+            screenReaderCurrentLabel="You're on page">
+          </pagination-controls>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-2">
+      <div class="col-md-12 text-center" style="margin-right: 100px; margin-top: 10px">
+        <input type="text">
       </div>
       <div class="container-fluid" *ngIf="profile==true">
         <div class="table-responsive-lg">
@@ -99,7 +139,10 @@
   </div>
 </div>
 
-<div class="container" *ngIf="role== 'USER'">
+<div class="container" *ngIf="role== 'USER' && pass==false">
+  <div class="col-md-12 text-center" style="margin-right: 100px">
+    <p style="font-size: 30px">USER PROFILE</p>
+  </div>
   <div class="row" *ngIf="profile==false">
     <div class="col-md-10">
       <div class="col md 12 text-center" style="margin-right: 100px">
@@ -134,3 +177,5 @@
     </div>
   </div>
 </div>
+
+
