--- a/src/main/resources/static/userinfo/src/app/login/login.component.html
+++ b/src/main/resources/static/userinfo/src/app/login/login.component.html
@@ -4,7 +4,7 @@
       <h3>Inventory Management System</h3>
       <form #loginForm="ngForm" (ngSubmit)="loginUser(loginForm)">
         <div class="form-group">
-          <input [(ngModel)]="user.email" type="text" class="form-control" placeholder="Your Email *" value="" id="email" name="email"/>
+          <input [(ngModel)]="user.username" type="text" class="form-control" placeholder="Your User Name *" value="" id="username" name="username"/>
         </div>
         <div class="form-group">
           <input [(ngModel)]="user.password" type="password" class="form-control" placeholder="Your Password *" value="" id="password" name="password"/>
