--- a/src/main/resources/static/userinfo/src/app/user-panel/user-panel.component.html
+++ b/src/main/resources/static/userinfo/src/app/user-panel/user-panel.component.html
@@ -5,19 +5,18 @@
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 <div class="container">
-  <h2 class="text-center">Contac Form</h2>
+  <h2 class="text-center">Changed Password Form</h2>
   <div class="row justify-content-center">
     <div class="col-12 col-md-8 col-lg-6 pb-5">
 
 
       <!--Form with header-->
 
-      <form action="mail.php" method="post">
+      <form (ngSubmit)="changePassword()">
         <div class="card border-primary rounded-0">
           <div class="card-header p-0">
             <div class="bg-info text-white text-center py-2">
-              <h3><i class="fa fa-envelope"></i> Contactanos</h3>
-              <p class="m-0">Con gusto te ayudaremos</p>
+              <h3><i class="fa fa-key"></i> Password Change</h3>
             </div>
           </div>
           <div class="card-body p-3">
@@ -26,31 +25,33 @@
             <div class="form-group">
               <div class="input-group mb-2">
                 <div class="input-group-prepend">
-                  <div class="input-group-text"><i class="fa fa-user text-info"></i></div>
+                  <div class="input-group-text"><i class="fa text-info">Old Password</i></div>
                 </div>
-                <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre y Apellido" required>
+                <input [(ngModel)]="forgetPassword.oldPassword" type="password" class="form-control" id="old" name="nombre" placeholder="Old Password" required>
               </div>
             </div>
             <div class="form-group">
               <div class="input-group mb-2">
                 <div class="input-group-prepend">
-                  <div class="input-group-text"><i class="fa fa-envelope text-info"></i></div>
+                  <div class="input-group-text"><i class="fa text-info">New Password</i></div>
                 </div>
-                <input type="email" class="form-control" id="nombre1" name="email" placeholder="ejemplo@gmail.com" required>
+                <input [(ngModel)]="forgetPassword.newPassword" type="password" class="form-control" id="new1" name="password1" placeholder="New Password" required>
               </div>
             </div>
 
             <div class="form-group">
               <div class="input-group mb-2">
                 <div class="input-group-prepend">
-                  <div class="input-group-text"><i class="fa fa-comment text-info"></i></div>
+                  <div class="input-group-text"><i class="fa text-info">Repeat Password</i></div>
                 </div>
-                <textarea class="form-control" placeholder="Envianos tu Mensaje" required></textarea>
+                <input [(ngModel)]="rematch"  type="password" class="form-control" id="new2" name="password2" placeholder="Repeat New Password" (input)="matchPass(rematch)" required>
               </div>
             </div>
-
+            <div class="alert alert-danger" role="alert" *ngIf="!notMatched">
+              Password not Matched
+            </div>
             <div class="text-center">
-              <input type="submit" value="Enviar" class="btn btn-info btn-block rounded-0 py-2">
+              <input type="submit" value="Change Password" class="btn btn-info btn-block rounded-0 py-2">
             </div>
           </div>
 
