--- a/src/main/resources/static/userinfo/src/app/dash-board/dash-board.component.html
+++ b/src/main/resources/static/userinfo/src/app/dash-board/dash-board.component.html
@@ -40,7 +40,7 @@
         <p style="font-size: 30px">ADMIN PROFILE</p>
       </div>
       <div class="container-fluid" *ngIf="profile==true">
-        <div class="table-responsive-lg">
+        <div class="table table-responsive-lg ">
           <div class="table-head table-bordered">
             <div class="row">
               <div class="col">Name</div>
@@ -49,8 +49,8 @@
               <div class="col">Phone</div>
             </div>
           </div>
-          <div class="table-body table-bordered">
-            <div *ngFor="let user of users|paginate:{itemsPerPage: size,currentPage: page,totalItems: totalElements}"
+          <div class="table-body table-bordered ">
+            <div *ngFor="let user of users | filter: item | paginate:{itemsPerPage: size,currentPage: page,totalItems: totalElements}"
                  class="row">
 
               <div class="col">{{user.username}}</div>
@@ -71,36 +71,7 @@
     </div>
     <div class="col-md-2">
       <div class="col-md-12 text-center" style="margin-right: 100px; margin-top: 10px">
-        <input type="text">
-      </div>
-      <div class="container-fluid" *ngIf="profile==true">
-        <div class="table-responsive-lg">
-          <div class="table-head table-bordered">
-            <div class="row">
-              <div class="col">Name</div>
-              <div class="col">Age</div>
-              <div class="col">Email</div>
-              <div class="col">Phone</div>
-            </div>
-          </div>
-          <div class="table-body table-bordered">
-            <div *ngFor="let user of users|paginate:{itemsPerPage: size,currentPage: page,totalItems: totalElements}"
-                 class="row">
-
-              <div class="col">{{user.username}}</div>
-              <div class="col">{{user.age}}</div>
-              <div class="col">{{user.email}}</div>
-              <div class="col">{{user.phone}}</div>
-            </div>
-          </div>
-          <pagination-controls
-            (pageChange)="page = $event; pageChangeFire(page)"
-            nextLabel="Next"
-            previousLabel="Previous"
-            responsive="true"
-            screenReaderCurrentLabel="You're on page">
-          </pagination-controls>
-        </div>
+        <input type="text" [(ngModel)]="item" style="height: 35px;" placeholder="Search ">
       </div>
     </div>
   </div>
